--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@
 *.prop text eol=lf
 *.md text eol=lf
 *.xml text eol=lf
+
+# Denote all files that are truly binary and should not be modified.
+* binary
